<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_do_list">To Do List</string>
    <string name="settings">Settings</string>
    <string name="tasks">Tasks</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="mode">Mode</string>
    <string name="light">Light</string>
    <string name="add_new_task">Add New Task</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="enter_task_description">Enter task Description</string>
    <string name="select_time">Select time</string>
    <string name="empty_tasks_text">It seems there is no tasks added yet. Tap the add button to add now.</string>
</resources>