<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.screens.SettingsFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/languageTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/language"
        android:textColor="@color/date_text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/languagesTil"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:boxBackgroundColor="@color/nav_bottom_bg"
        app:boxStrokeColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/languageTv"
        app:startIconDrawable="@drawable/ic_languages">

        <AutoCompleteTextView
            android:id="@+id/languagesAutoCompleteTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:padding="15dp"
            android:text="@string/english"
            android:textColor="@color/blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/modeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/mode"
        android:textColor="@color/date_text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/languageTv"
        app:layout_constraintTop_toBottomOf="@id/languagesTil" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modeTil"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:boxBackgroundColor="@color/nav_bottom_bg"
        app:boxStrokeColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/modeTv"
        app:startIconDrawable="@drawable/ic_mode">

        <AutoCompleteTextView
            android:id="@+id/modeAutoCompleteTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:padding="15dp"
            android:text="@string/light"
            android:textColor="@color/blue" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>