<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".ui.home.screens.AddNewTaskFragment">

    <TextView
        android:id="@+id/addTaskTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/add_new_task"
        android:textColor="@color/date_text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:layout_constraintTop_toBottomOf="@id/addTaskTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_task"
            android:paddingStart="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/taskTil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_task_description"
            android:paddingStart="10dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/selectTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:text="@string/select_time"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@id/descriptionTil"
        app:layout_constraintTop_toBottomOf="@id/descriptionTil" />

    <TextView
        android:id="@+id/timeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/date_text_color"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/selectTimeTv"
        app:layout_constraintTop_toBottomOf="@id/selectTimeTv"
        tools:text="12:00" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue"
        android:src="@drawable/ic_check"
        android:tintMode="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeTv"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlayExtended" />
</androidx.constraintlayout.widget.ConstraintLayout>